Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Úterý, 12. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová</strong>
+<strong>Kari polévka se zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Chilli con carne s rýží</strong>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny se slaninovo-sýrovou omáčkou a rukolou</strong>
+<strong>Opečená jitrnička se zelím a vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
