Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 12.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s bramborami a uzeným masem v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s bramborami a uzeným masem samostatně  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí ořech na víně, restované žampiony, kořenová zelenina, bramborová kaše  <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Quesadilla zapečená s kuřecím masem, zeleninou a cheddar sýrem, jalapeňos, trhaný salát, bylinkový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Bulgurové rizoto se zeleninou a pestem ze sušených rajčat, parmazán, rukola  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>250g Bavorská bageta dle denní nabídky</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>200g Ovocný salát s hroznovým vínem a švestkami</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Medovník <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Skořápkové plody">8</em></div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">7. </span>80g Míša dort bez lepku <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">8. </span>200g Jáhlový pudink se švestkovým pyré bez lepku a laktózy</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -127,7 +177,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jinoceskeho kapra a atlanticke makrely s okurkovymi tzatziki, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s okurkovymi tzatziki, pohantka s pecenou zeleninou, salatek 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s benatskym ragu z divoke kachny na cervenem vine s rajcaty,  lesnimi houbami a parmezanem, salatek {L} 169</li><li>Maghrebska zapecena saksuka s rajcaty, vejci, paprikami a balkanskym syrem, kuskus, salatek {L} 139</li></ol>
+<ol><li>Peceny atlanticky hejk s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho islandskeho halibuta s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 169</li><li>Vietnamske dusene hovezi s chilli, zazvorem, pak coj a kvetakem, ryzove nudle 139</li><li>Spagety s nudlickami danci kyty, pecenou dyni, rimskym salatem, petrzelkou a parmezanem {L} 169</li><li>Kvetakova pakora – cizrnove smazenky s bylinkami, panc phoron a ajowanem, jahly se smazenou cibulkou, jogurtova rajta, salatek 139</li></ol>
 </td>
 </tr>
 </table>
