Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -177,7 +177,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho islandskeho halibuta s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 169</li><li>Vietnamske dusene hovezi s chilli, zazvorem, pak coj a kvetakem, ryzove nudle 139</li><li>Spagety s nudlickami danci kyty, pecenou dyni, rimskym salatem, petrzelkou a parmezanem {L} 169</li><li>Kvetakova pakora – cizrnove smazenky s bylinkami, panc phoron a ajowanem, jahly se smazenou cibulkou, jogurtova rajta, salatek 139</li></ol>
+<ol><li>Peceny atlanticky hejk s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho islandskeho halibuta s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 169</li><li>Vietnamske dusene hovezi s chilli, zazvorem, pak coj a kvetakem, ryzove nudle 139</li><li>Spagety s nudlickami danci kyty, pecenou dyni, jalapenos, rimskym salatem, petrzelkou a parmezanem {L} 169</li><li>Kvetakova pakora – cizrnove smazenky s bylinkami, panc phoron a ajowanem, jahly se smazenou cibulkou, jogurtova rajta, salatek 139</li></ol>
 </td>
 </tr>
 </table>
