--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho islandskeho halibuta s orechovym pestem, stouchane brambory s cibulkou, salatek z cervene repy 169</li><li>Vietnamske dusene hovezi s chilli, zazvorem, pak coj a kvetakem, ryzove nudle 139</li><li>Spagety s nudlickami danci kyty, pecenou dyni, jalapenos, rimskym salatem, petrzelkou a parmezanem {L} 169</li><li>Kvetakova pakora – cizrnove smazenky s bylinkami, panc phoron a ajowanem, jahly se smazenou cibulkou, jogurtova rajta, salatek 139</li></ol>
+<ol><li>Peceny filet z faerskeho slede s citronem a omackou aiolli, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou aiolli, pecene baby brambory, salatek 169</li><li>Libanonsky kruti kebab v korenene jogurtove marinade, zeleninova ryze, jogurtova rajta, salatek 139</li><li>Kasmirska jehneci korma s pecenou dyni, cizrnou, orisky a kokosovym mlekem, jasminova ryze 165</li><li> Dusena cerstva brokolice s omackou z ovciho syra a bylinek, pecene baby brambory, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
