Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Středa, 13. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kari polévka se zeleninou</strong>
+<strong>Vývar se zeleninou a hovězím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem NEBO těstovinou</strong>
+<strong>Vepřová panenka na rozmarýnu s gratinovanými brambory a dušenou karotkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							145,-
 						</span>
 </p>
 <p>
-<strong>Opečená jitrnička se zelím a vařeným bramborem</strong>
+<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
