Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z faerskeho slede s citronem a omackou aiolli, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho africkeho sumecka s citronem a omackou aiolli, pecene baby brambory, salatek 169</li><li>Libanonsky kruti kebab v korenene jogurtove marinade, zeleninova ryze, jogurtova rajta, salatek 139</li><li>Kasmirska jehneci korma s pecenou dyni, cizrnou, orisky a kokosovym mlekem, jasminova ryze 165</li><li> Dusena cerstva brokolice s omackou z ovciho syra a bylinek, pecene baby brambory, salatek {L} 139</li></ol>
+<ol><li>Peceny pstruh s citronem a ancovickovou omackou s dijonskou horcici, cizrnovy salat s paprikami, cuketami a bylinkami 139</li><li>Peceny filet z cerstveho morskeho dasa s citronem a ancovickovou omackou s dijonskou horcici, cizrnovy salat s paprikami, cuketami a bylinkami 175</li><li>Thajske restovane veprove se zelenymi fazolkami, chilli, koriandrem a sazenym vejcem, jasminova ryze, salatek 139</li><li>Burrito s bazantimi gyros nudlickami, rajcaty a rimskym salatem, pohanka se smazenou cibulkou, jogurtovy dip, salatek {L} 169</li><li>Zapecene papriky plnene cervenou cockou s brokolici, kvetakem a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
