Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Čtvrtek, 14. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a hovězím masem</strong>
+<strong>Cibulová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřová panenka na rozmarýnu s gratinovanými brambory a dušenou karotkou</strong>
+<strong>Smažené žampiony s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							145,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Vepřová plec na hlívě s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
