Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 15.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Gulášová polévka v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Segedínský guláš, houskový knedlík, opečená slanina <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilované kuřecí prso, teriyaki omáčka, basmati rýže, sezam, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Vaječná frittata zapečená s batáty a brokolicí, pohankový salát <em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Rajčatový salát </div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>100g Čokoládové brownie <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Višňový koláč s vanilkovým krémem <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s citronem a ancovickovou omackou s dijonskou horcici, cizrnovy salat s paprikami, cuketami a bylinkami 139</li><li>Peceny filet z cerstveho morskeho dasa s citronem a ancovickovou omackou s dijonskou horcici, cizrnovy salat s paprikami, cuketami a bylinkami 175</li><li>Thajske restovane veprove se zelenymi fazolkami, chilli, koriandrem a sazenym vejcem, jasminova ryze, salatek 139</li><li>Burrito s bazantimi gyros nudlickami, rajcaty a rimskym salatem, pohanka se smazenou cibulkou, jogurtovy dip, salatek {L} 169</li><li>Zapecene papriky plnene cervenou cockou s brokolici, kvetakem a balkanskym syrem, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {hejk, makrela, halibut} se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 139</li><li>Peceny filet z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou a zelenymi bylinkami 169</li><li>Jamajske palive dusene hovezi s pecenou dyni, cestvym chilli, rajcaty, zazvorem, novym korenim a zeleninou, jasminova ryze, salatek </li></ol>
 </td>
 </tr>
 </table>
