Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 15. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Cibulová</strong>
+<strong>Polévka z červené čočky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažené žampiony s vařeným bramborem a tatarkou</strong>
+<strong>Mexická Vepřová krkovička s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Vepřová plec na hlívě s rýží</strong>
+<strong>Nudle s mákem, cukrem a máslem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							95,-
 						</span>
 </p>
 <p>
